--- a/Portfolio Project/templates/index.html
+++ b/Portfolio Project/templates/index.html
@@ -96,6 +96,12 @@
           <span>CSS (Including Bootstrap)</span>
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar" style="width: 87%"></div>
+             <div class="align-progress">
+          <span>Javascript</span>
+        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" style="width: 35%"></div>
+          </div>
+        </div>
 
           </div>
         </div>
